<resources>
    <string name="app_name">LatePay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">LatePay</string>
    <string name="nav_header_subtitle">contact@latepay.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuración</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!--Nombres de las opciones-->
    <string name="menu_cliente">Lista de clientes</string>
    <string name="menu_agregar_cliente">Agregar cliente</string>
    <string name="menu_actualizar_cliente">Actualizar cliente</string>
    <string name="menu_acerca_de">Acerca de</string>
    <string name="nombre_cliente">Ej. Cliente</string>

    <!--Nombres de las acciones-->
    <string name="guardar">Guardar</string>
    <string name="actualizar">Actualizar</string>
    <string name="eliminar">Eliminar</string>
    <string name="aceptar">Aceptar</string>
    <string name="salir">Salir</string>
    <string name="cancelar">Cancelar</string>

    <!--Nombres de los mesajes-->
    <string name="confirmacion_eliminar">¿Está seguro de eliminar el cliente? Toda la información se eliminará (datos y registros de compra). Esta acción no se puede deshacer por lo que no se recomienda.</string>
    <string name="registro_eliminado">Registro eliminado exitosamente.</string>
    <string name="registro_actualizado">Registro actualizado exitosamente.</string>
    <string name="confirmacion_hacer">¿Qué desea hacer?</string>
    <string name="ver_registros">Ver cuenta</string>
    <string name="editar_cliente">Editar cliente</string>
    <string name="deuda_total">Debe: MXN $</string>
    <string name="error_nombre">Debe ingresar un nombre.</string>
    <string name="error_nombre_valido">Debe ingresar un nombre válido.</string>
    <string name="error_apellido">Debe ingresar un apellido.</string>
    <string name="error_apellido_valido">Debe ingresar un apellido válido.</string>
    <string name="error_telefono">Ingrese un teléfono válido.</string>
    <string name="error_correo">Ingrese un correo válido.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Nombres de los inputs-->
    <string name="txt_nombre">Nombre</string>
    <string name="txt_apellidos">Apellidos</string>
    <string name="txt_telefono">Teléfono</string>
    <string name="txt_correo">Correo electrónico</string>
    <string name="txt_direccion">Dirección</string>
    <string name="txt_id">ID</string>
    <string name="txt_fecha_creacion">Fecha de creación</string>
    <string name="si">Sí</string>
    <string name="informacion">Información</string>
    <string name="action">Action</string>
    <string name="pagar_producto">Pagar</string>
    <string name="editar_producto">Editar</string>
    <string name="pagar_todo">Pagar todo</string>
    <string name="agregar">Agregar</string>
    <string name="producto">Producto</string>
    <string name="precio">Precio</string>

    <string name="mensaje_pagar_todo">Se pagarán todos los productos de este cliente. ¿Desea seguir con esta operación?</string>
    <string name="mensaje_no_productos">No hay productos asociados a este cliente.</string>
</resources>