<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actualizar_cliente">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/primario"
                android:gravity="center"
                android:minHeight="48dp"
                android:text="@string/txt_id"
                android:textAlignment="center"
                android:textColor="@color/secundario"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextNombreUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/txt_nombre"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:maxLength="10"/>

            <EditText
                android:id="@+id/editTextApellidosUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/txt_apellidos"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:maxLength="10"/>

            <EditText
                android:id="@+id/editTextTelefonoUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/txt_telefono"
                android:inputType="phone"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/editTextCorreoUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/txt_correo"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/editTextDireccionUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/txt_direccion"
                android:inputType="textPostalAddress"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/textViewCreacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:minHeight="48dp"
                android:text="@string/txt_fecha_creacion"
                android:textSize="18sp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="bottom">

                    <Button
                        android:id="@+id/buttonEliminar"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="15dp"
                        android:layout_weight="1"
                        android:text="Eliminar" />

                    <Button
                        android:id="@+id/buttonActualizar"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="15dp"
                        android:layout_weight="1"
                        android:text="@string/actualizar" />

                    <Button
                        android:id="@+id/buttonCancelar"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="15dp"
                        android:layout_weight="1"
                        android:text="@string/cancelar" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>